--- a/weekly-workshops-randhirdogra1-main/style.css
+++ b/weekly-workshops-randhirdogra1-main/style.css
@@ -2,3 +2,25 @@ h1 {
     text-align: center;
     font-size: 20px;
 }
+
+#Classes{
+    margin: 10px 0px;
+    padding: 10px;
+    border: 1px solid #9a7799;
+}
+
+.section{
+    margin: 20px 0px;
+    border: 1px solid #9a7799;
+    padding: 10px;
+}
+
+img{
+    width: 200px;
+    height: 200px;
+}
+
+video{
+    width: 200px;
+    height: 200px;
+}
