--- a/weekly-workshops-randhirdogra1-main/week03/style.css
+++ b/weekly-workshops-randhirdogra1-main/week03/style.css
@@ -1,1 +1,29 @@
+body { 
+	line-height: 1.88889;
+	color: #000000; 
+	background: #fff;
+	font-family:sans-serif;
+	margin: 10; 
+	padding: 10;
+	}
 
+h1 {
+	margin:10;
+	padding:10;
+	text-align: center;
+	font-size:large;
+}
+
+h2{
+	margin:10;
+	padding:10;
+	text-align: center;
+	font-size:medium;
+	color:#615d5d
+}
+
+p { 
+	margin: 10; 
+	padding:10;
+	text-align: center;
+	}
