--- a/weekly-workshops-randhirdogra1-main/week03/style.css
+++ b/weekly-workshops-randhirdogra1-main/week03/style.css
@@ -1,29 +1,45 @@
 body { 
-	line-height: 1.88889;
+	line-height: 2;
 	color: #000000; 
 	background: #fff;
-	font-family:sans-serif;
-	margin: 10; 
-	padding: 10;
+	font-family: 'Maven Pro', sans-serif;
+	margin:0;
 	}
 
+header{
+	top:0;
+	left:0;
+	background-color:rgb(144, 235, 171);
+	position:relative;
+	left:175px;
+	
+}
 h1 {
-	margin:10;
-	padding:10;
-	text-align: center;
-	font-size:large;
+	background-image:url(https://www.maxpixel.net/static/photo/1x/China-Wind-Ink-Painting-1282490.jpg);
+	text-align:left;
+	font-size:xx-large;
+	background-color:rgb(144, 235, 171)
 }
 
 h2{
 	margin:10;
 	padding:10;
-	text-align: center;
+	text-align: left;
 	font-size:medium;
-	color:#615d5d
+	color:#615d5d;
+	font-family: 'Kaushan Script';
+	background-color:rgb(144, 235, 171)	
 }
 
+
 p { 
-	margin: 10; 
-	padding:10;
-	text-align: center;
-	}
+	margin: 10px; 
+	padding:10px;
+	text-align: left;
+	position:relative;
+}
+
+.sidebar{
+	grid-column-start:3;
+	grid-column-end:4;
+}
