--- a/weekly-workshops-randhirdogra1-main/week03/style.css
+++ b/weekly-workshops-randhirdogra1-main/week03/style.css
@@ -11,13 +11,19 @@ header{
 	left:0;
 	background-color:rgb(144, 235, 171);
 	position:relative;
+	width:100%;
+	height:40%;
 	left:175px;
 	
 }
 h1 {
 	background-image:url(https://www.maxpixel.net/static/photo/1x/China-Wind-Ink-Painting-1282490.jpg);
-	text-align:left;
+	background-size:80px;
+	background-repeat:no-repeat;
+	background-position:0em;
+	position:relative;
 	font-size:xx-large;
+	text-align:2em;
 	background-color:rgb(144, 235, 171)
 }
 
@@ -39,6 +45,14 @@ p {
 	position:relative;
 }
 
+.pagewrapper{
+	display:grid;
+	grid-template-columns:2fr, 1fr;
+}
+.intro{
+	grid-column:1;
+	grid-row:1;
+}
 .sidebar{
 	grid-column-start:3;
 	grid-column-end:4;
