--- a/weekly-workshops-randhirdogra1-main/week04/style1.css
+++ b/weekly-workshops-randhirdogra1-main/week04/style1.css
@@ -3,6 +3,25 @@ h1{
 }
 
 .forgo{
-    border:5px;
+    padding:2px;
+    border:3px;
+    border-style:solid;
     border-color:black;
+    display:inline;
+}
+
+.signin{
+    padding:2px;
+    border:3px;
+    border-style:solid;
+    border-color:black;
+    display:inline;
+}
+
+.username{
+    padding:2px;
+    border:3px;
+    border-style:solid;
+    border-color:black;
+    display:inline;
 }
