Downloaded week 5 html

--- a/weekly-workshops-randhirdogra1-main/week03/style.css
+++ b/weekly-workshops-randhirdogra1-main/week03/style.css
@@ -34,7 +34,7 @@ h2{
 	text-align: left;
 	left:80px;
 	font-size:medium;
-	color:#615d5d;
+	color:#5e5b5b;
 	font-family: 'Kaushan Script';
 	background-color:rgb(144, 235, 171)	
 }
